resources/webmethods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webmethods
    app.kubernetes.io/component: webmethods
    app.kubernetes.io/instance: webmethods
    app.kubernetes.io/part-of: webmethods
  name: webmethods
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webmethods
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webmethods
        deploymentconfig: webmethods
    spec:
      containers:
      - image: quay.io/wdovey/softwareag:latest
        imagePullPolicy: Always
        name: webmethods
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
