resources/webmethods/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: webmethods
    app.kubernetes.io/instance: webmethods    
  name: webmethods
spec:
  port:
    targetPort: 5555-tcp
  to:
    kind: Service
    name: webmethods
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
